准备构建面向存储的Aird格式

--- a/AirdPro/Properties/Resources.resx
+++ b/AirdPro/Properties/Resources.resx
@@ -223,4 +223,10 @@
   <data name="MLFastConfigFile" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\config\mlfastconfigfile.json;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="Computation" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\imgs\computation.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="SearchEngine" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\imgs\searchengine.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
