列存储基本函数开发完毕，性能调优中

--- a/AirdPro/Forms/AboutForm.resx
+++ b/AirdPro/Forms/AboutForm.resx
@@ -118,6 +118,117 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="pbCheckUpdate.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAATAAAABICAYAAABx/anrAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACxEAAAsRAX9kX5EAABiOSURBVHhe7Z2Je0xX/8D7J3h+b+3LJLaIkMUSRRC0tGhf
+        bTGqVIpqtRVDEhpbQhBpkNhLBgmxxZLUUq0lplWvtSZFLDEkFKkKE0mMZXTO73zvzJ3MxJm5ayaznPM8
+        n1RO51xy7zmfnOV7zn0DIeQyIg498ut1qGxor58fJvb+5aGmz+F/CiKPPEB9jz5A/Y79jfrn/43ezi9F
+        7xy/jwZo7qOBv95DA3+7V/Luibua907cTR/0+19Rg0/eCSVdm0Kh+B7ETDnpfuBxZI+Dj9N7/vSoBAsM
+        YYEhLDCEBYawwBAPgSEsMIQFhrDAEBYYGvK/O+Xvn7qd+cGp20NJfyeFQvENiJlSCf+x3K/bvvLEt/br
+        S7DAEBYYwgJDMgoMYYEhLDD0wemS8v+eKckceraY9swoFB+DmCmWLnlP/LrmPcnEAkNYYAgLDLlAYAgL
+        DGGBoQ/P3dJ8dP5WJOnfRqFQvA9iplA6762s1zm3IhMLDGGBoToUGMICQx+fv6kZ9sdN2iOjULwcYqYQ
+        Ou2pVGGBlWOBITcSGMICQ8Mu6NKHa2/UI/27KRSK50PM5EPorqp6YburNFhgCAsMuanAEBZYyYiCG7Q3
+        RqF4IcRMLkJynkZigZVjgSEPEBjCAkPKgiIV6WehUCieCzHTGcE7DVFYYAgLDHmYwNDIP4syST8ThULx
+        TIiZjui405CIBYY8WGDok4vX80Zduk7nxSgUL4CYSaLDjmeZWGDICwSGsMAKRl2+RiVGoXg4xMyaBG1/
+        nogFhrxIYAgLLI/0s/oqjT+Zq/CP2axpv/KCAZ5px4zrxrYLfiltPiGVzh1S3BZipi3ttz2PwgJDXigw
+        9Onla3RODNN0bLIyeEupKQw/S3ieVuC5YlrGZmlI5SiUuoaYyRK49UUoFhjyYoGh0YVXfb6H0WF9kRGe
+        pSOBdd5bgVp8lZZMKusttJ2UqAyYvEDVzpZoG6Yk0Z6oG0LMBAKzX9TDAiv3AYGhMVeu+mycWLOJ6cmM
+        vDgEFrTqDwOpvLfQbd1h/dvHoe6Z6x8DroNQDxlwXaxZhlL3EDMBLLA8LDDkIwIrGXP1ik9O6vvFbNHw
+        ERg835plvQkqMM+EmBmw5eVQLDDkQwJDWGDppHvhKhqMSVMpks7o/RYAp/X+wMJqWi48ZaXBiEQF6Rpi
+        oAIzI4fAem44pGfY+JMdETb02mTLQX3vzGr6AFkH9OGpGdpOiWm5HWMS6bCVg9cyArYY62GBlfugwNBn
+        Vwvr7CSLZtMP6vB9R+2yAXzvLfefBZ4DS5OJ69Ska4hBEa3O5SOwYPU1I6m8tyCHwKCOsvXUlsEnzfWW
+        rbvV3GbqMQtbn1mgXg/Ov2zqvmKLjsqMzGsZWGCJ0JB8VGB1ttrWZn2Zia/A/OceKyVdQwwQPsGsQHII
+        rGWcd69EuqvAqilGkZv36zuoZilJf7evYvdN281GPyww5MMCQ2OvFbr8lNdGE9ar4Z7zFVgQRs5hZIuv
+        16idCSxopXdP4AOeIDCo40DY7BTZeuCejt03WGDpVGCFBbb3xBW0mJ1fKlRgTb/elEu6lliajVuiCkg9
+        obcVWEj2fVPL2M0+EQPmSQIDOs2hEgOsf2iT9aoeFlg5FVghirp+2WVzYW8Om69g5SVEYK2XXqyVXlGT
+        UXMVzcenqpqOnh9B+v/eiqcJ7MNzxSj0uySvjs3jg/UPWGAqLDDciMQLbOmlZ2j9tecoAzNfa3AqsEHH
+        ytDKa5Uo82YVyrxVhbKA4iq0ubiSYUsJUIF+uFmO5l0pQ9m3K9DWO08Ytv0FlKPtwF0zO+7pGXbeBx6j
+        HEzs1b/ECsxl24waTciwDh+FCAxo+MkCn5JMbeKJAntfc9HUflKMbFMJnoj1D1hgBVIEFnMaOgT26cNj
+        T4gCe+9oGbpRAYtazlOV8V+Ue7fK8p3w9PTVvyju2h0xAkNRRZddEhfm/32hQazAWsTu1pKuSRGOKwQW
+        npat6zB1nsqOadV0WbhG0335Ft2A/aeNfAQGI47w5FU+vc2L+dI681UoFhiSIjDN/deFtOPWc6LANuqe
+        Wj7hPEEP7GL5C8t34lJO6SOxAovCxV+7YXLy5ohFEez9FiOwtqtveUVog/9Xi1VtY9fmBsRv1LRWrRA9
+        t9Pqy3nKwBlrcoPmZGjClv1Y2mXNEX3I4p06+D4wNk3dasJshz1WVwisU9Ja3rKBODA+AoNeGKm8VIKn
+        xEaEz1uk7pm6XNNzyXJNiCpWUm+/66xZqp4pKbm909I0/dUZuiF7duuBPmnLNH3Sl2neSpyb3DlmmuC/
+        g/mCBaaSIrDI/eReUqnhX6LAtI9eWj7hPNWxwGp9GNnoq8xcKQKD59JodIrkZfWA73/Xw7N0FkZRs0xN
+        YN6TBeY/zeiZaQSgY7pGb/v5FmNmKQLiN2m67bptYusHELLiuN3nuPCPmqloP1uteWvbn8ZImFNl51VZ
+        jlrmWBn+Rm9lnjSAzGpex90EBoTN/l7NJTAgODaBGCPWLWWl5mOYC7bMBzNzwixa8/xwzTLhicnqQXm/
+        GJS4rUB7YbhYhDp9N1twHFrXmbNU/TPUOuXZcyamjV25YoZpayyF6DPc5qDdAcN/zTeC0DrHTuUlM+YL
+        FphGisCWXnyOL0NOM85XCprEt00gMCGT+NMK7zLDRtskQWBQ/LUbJictl5cYnQmszapiI5fA/OL360jX
+        FoKrBdZqykp1eI5ZXCxiBBY4a4MmIveWCeoRU5d4CIypZ5iInVpj28kLrY3SHQUGRG4+oOcSmKNhpBCB
+        BU+Ji3hne55eaWkrUgTWBYvro3yNEdoWAyMvfgJjgTY4YMN6XSdVtNM5PuYLFhiSIrDr5fbSsE0H/3rh
+        MoHBw1yss7+GFIF9XnSp1lYj649KVdreb5LAmkZv07RacsngTGDtNz6QPIRwpcDazdmqhV452zMXIzC/
+        sTMVXTecMjB1yFKPhAqMAde3kAWZzDyiuwqsuhfmWGA9V2YRf4nxFVhoTLzyw5Nak7mdiBdYSLRK8U5W
+        dumnrLgkCgz49I/Tpu7z5jpcbX2j1aZ/I6UI7JOj9vNZ22++QL+W2g8RBxzWu0xgc67ft5Q2J4kCS8SX
+        IN44qTRR7dVyCazByIURTSZtynUmsA7bn6Em41dIWk53lcBaT1uXy8pLrMBaTpyv7Ln3lgnqjxwC659f
+        isK+36FzV4HBFiIugfXdgm80oSwfgYVMq5aXFIGFTo2JeP/AIQO0KTkFxrbF/mtXEhesQGAqKQLbdsNe
+        Vh8crkRxZ+yltuDPKk8VWK3Ng7Ve98jkTGCtUi8xcV4gMS6BSR1GukJgXXfeMcF/pQgMel5d1LjnZak/
+        cgkMYg8ZfFBg7+YeNrDyEisw6HkNP33exMirlgT2OWbAxvWv1XMQWLoUgVW+hBGMORWVv7IGstrm33jy
+        ylMFVitR+Q2jVifDvXYmMOh5sZ+HYaQzgQENleK3FrlCYCxSBBa2Kl/P1B0qMNkEBkgRWMhklWII7nmx
+        7ak2BQZELJpvtwADAtOIFdi0/z3D16hOiRcMVoHtuGk/sT8M10sPFBhcwu6ByUGz6T/puATWQLnQugoD
+        MuMSWNMvfxAdfuAJAms7dbm618+WuuNDAuu6aLWGS2BSJvGlCqz3ijVaaEuuEhi0yfD4OOvKOwisQKzA
+        jt97ha9RnfoerLAKbIym0pJrTjnFzyQLbN0tPWck/vGyGn+vmwnsPx/PV7DDR0cCa2kZPrLAMJJLYK2S
+        TznsuXDhCQLrtvWSka/AIn7UmTrO36xt8031KiPQ9tuFquCkLG2f/TdMniCwwK9iFQMPnDZyCczRvsja
+        FliX+NmqUZfM8uIS2Miz50x9V6/Wdp4+3S7sp1PMtIiI7xfnQvgEX4F9kJtjrSMgMCRGYL3y7Oe59t9+
+        +dpeyCI8dGQTxIRJEdiMiw8tucKSVIGNuyHvSmTD8RlqVl6OBGY7fGTxm3us1JnA4Pk0HCVua1FdCSxs
+        3VlD+6Q9OogHgyBWR4Gs1b0vboGFLdtX6v95vNPhdKtx3ylCsMjcXWBwDphZXs4FFvTtdOJzFyOwj05q
+        Tf02bivtAQGsLA4CWd/N2avnI7BBu/foO02L4aybEP/FR2DAW3PiGaGKFlhqgX2A6f2n/6I/Hr4yU2ZE
+        FzAgLdsUf6HS5QLLvPvQrQTWbObxUi6B1bcZPrI0mbhOzSWwZt9sFHVChasFFpRysLRFVAJv2XbJOG3g
+        I7Dg5BxBixmBcWlqdxRY8PSFyf125huq5eVYYI7mvwAhAnv/8O/GronJvKchQqfGRjDtiENgg3btETQy
+        6LEwSc1HYIO3ZzFn4okWmLPYL0fpp7vPRQvsmwsPLLn80/FHFdYH5A4Cg+Fjm6xqeZEE1mIObkmEsnD+
+        F5fA2iz7U9QJFa4UWCDucZHKO8Jv3NwIc51xLrDOa46KGkJDHJirBNY/76zR2ZHS/XYeN8CcLgsfgTmK
+        wgf4Cuy9vMOGjt9OFbQI1HvFWi2XwJRnzplCo6cIXlzqt2aVlktguF2iLnFTI0QJbMRh+8l7Iem9o3gY
+        KUJgbMWAilBzEl99+7GlhDnFXPnL+tDcSWCNvszK5RJY4y/WO/wtyA4jHQkMaDxG+NYiVwms5nYiPrSB
+        4SMPgbUcP4d3j84WGE5GHigyuUJgbN2tRtppFL3X73R6Mi9fgUEgK6m8M4bs/9nAJbDuSQtELSyFqaIV
+        EMDKJbCI5PlqUQLLLrLfuG0dOtYYQgIQQmGbFl3Ew0iZBaa6ZL/yCMfpuKPAFIsLDVwCqz98nsPfWOww
+        0pnAFHG7BJ9Q4SqB+X+9THDAbfuEbC2XwIQOHWvSMWG9xtME9s7uYwauo3T4CKzvhu2CjycPnqxSmOXl
+        WGBie18sELjKJbCBm9bpRAnMNsYLhpJMJXdyoGGl0SYmrMIou8DgAdvugSyseOZ2AoOTJ+AeOxMYnMxK
+        KsvCDiOdCazdmpuCT6hwlcBqluFD6Mp8PZfA2kSnStqJAC+19SSBvb2LW14AH4GFL1gieN60M7P66Fxg
+        AzZnCxajLd1mx6u4BPbfvBw9CExQGIXqd/vJ+4TzzzkFtrPYPiZs+K+PZRfYGb39qqhcAsOJeIOF0kSV
+        q+USGJyNTyprS4vvDuicCawjpqnArUWuEFjID2dFzc/xEZh/lPNVRz54isB6rc8pDeR5iCEfgYXNmONw
+        Ds0RXeckJnMJrNeyNMExb7bAJm4ugY3RnjKBwAQFsubftR8S9tlXxSmwsSeeWD5tTrtKDLILbMPtR5ZS
+        5pRQdN+tBOafftvIJbA3hzkePrI0HrcymUtg/jP3CRpSuUJgYua/gO57ik1cAqtZRgyu2AspRWDwRqLg
+        WGGvVuMjsA7fCJu8B3ouXa7hEpjY+S9buAQGgMB4byXqsdd+8n5fiZGp6FwCg0DFGxX2MWFyC2zqZaaC
+        WRMcKS2DwGTZSvTmJ6lKs7wcCwzeC0kqSyJwwz8mZwIL2vS3oBMq3FlgESAvHxUYHKUDkfgdpswWdeYb
+        H4HVLMMHPgKDs8BIZYXAV2C8N3OnaO03bsNWIr4CW37Ffog3S/tEVoFB99puHqzymRwCk2Uzd9O4Qzou
+        gTX8fBXvYZ+CHUY6EFjHHQbU7Ku1vH8D0h6YawTGdaR0RyAmUdX+mxmiVlRrUpcCC5+bIGleEuArMN7H
+        6VzTVwvi/lOT9TwwPgIbeMQ+1OHQveeyC+y1eTDpApPlOJ1WPzw2cQmsyeTtGqApwzYz0dU0m7LVCrzY
+        lktgLecd4T2J6s4Cc9UcGBNKUcsCE7MXUgq1JbBu8xepuQQmdQ4M4CUw+CAfgQ372X7yfmvRS0ECg31u
+        Jx7YX2Nw/kNZBbbhTpmlpDklFN2TKjDJK5D1x65OrpaXY4GxsJu52fvPAs+BhWsODAQG85WNlAm8Gran
+        C0zqKmTrL2ZFuGIS31sE1pnHKiQcJU0qyxfeq5DwYSwwziOlt1y3n7wf9NNTwQKDrUS2SVdhRCN/L5NN
+        YHCktG3KKX0sSWA4vXZjhdIk1nb46FqB8R1GurPAXBEH1j5umZoKjD8h1m1EjgUGR0qTyvKFTxzY4O1Z
+        pcyHscA4X+pRaTP9dR0PJdnzwIQIDDZzV9nEhIlJRx9UIeXZu0SBwdaKmmfi10zw/w+VPUYTrhZxCUzy
+        /Bdz8oSld1sXAgtIK+AVuuDOAqvtSHygV47WSAUmjKHHfjM6Exi0KykT+SN+yzdyCazPkuRc5sO4kTl9
+        rVr0CfvJ+/HHn4sW2K4S8duQ2HSr6qVDgdWcB3OUzldUcglM8mvVGozPUNelwCDouPGoJM6G7c4C47sX
+        MnTZPlGBk0Hxq3IZeVGBCaLvug06LoEJ3cjNAqdSWOXlRGDMXki2EG5cDl9se+yuuVcDEfhzzrywngcm
+        RmDjTpZL7oVBmln4gCiwlcX/WD7BnVTXbzoTmOQX2zafd05f1wJTTM3mbDTuLDCA72kUATHpgmKP2kxK
+        VPZh90FSgQmiOpjVscCAnotTBEX6d50xXWltg04E9vHh/czowloQNy6VI4GtvvQKpVwwooEHnjGNQorA
+        4LcpROJv0j1Fm24+RZk3q1DmrSqUBRRXoc3FlQxbSoAKtOV2Bcq2AIcZsgcajr9wjyiwj87fQquwxCAO
+        DObA4DywXX+b2Q08KEN7gH/KnAlM+vBxeHIEyKuuBRa4Vsc5F+HuAhNyHljQbDUvSbRTpST3OXDD5O4n
+        skqhNgUGmIeRzgXGSCyFn8Tg5bajzp8x8REYbOSGMtbCuHHVww2qnCQwpqFAw7A0CqkCYyqhpeLVXIWE
+        igSVByrNQFxphEziswL7+Hz1Q4OHJGISX/LqY8OJm3O5BKaYf1bPhk8ICaNobkPA6ptGZwIDGn+W7DQQ
+        0t0FBi/z6LG32MRHYED37QXGdjGvv7wWCMDiCv/hiN5TjpSWQm0LzBxOwS2w0bh9Dd69Rw9v5yZdpwvu
+        db2bvbkU2h6LM4EpTxyz/lK2uxBuVOlUYIWyRN+3WHzFwCWwBmPSJUcrK2J3abkE5jc9x+kJFe4uMCBg
+        +tpcvgJj6pSFLmuP6IGuGE88E18KtS0wYMh+8ws9uATGtLErV9DIs2dNg/fs1g+xMEyTbxR6Jj57Gitg
+        94/BjcqPCqxwqO09EcN/Ri5Rts40n/LhSGDwVm5SWaE0Gp2i5BJYUJbzrUWeIDCgixrmwoQJDOoWU78Y
+        qMDkFlinuBlKeKUaX4FJfalH/7Ur7H4Z2/1jACywRB8WmCwVrFF0npZLYPBiW1JZMTDDSCcCC8bPq9kX
+        yx0Ge3qKwPzHzY3oAS+1pQLjhSsEBnRLWqh2hcCI74WsmYEFVg8LrNxHBSbL2V+KZXeMXAKrPypV1AZd
+        EswwkkNgLWc5PqHCUwQG+NqbuaXgKoEBILHaFBhJXsBrGQAW2FAfFFg66V4I5c1Pl6taMYdEOhaYXMNH
+        FmYYySGwDngY2WgkeWuRJwkMYCSWa5aYVIGBvOCaVGDSgdesjYA3dMsssMjlSx3eN2ImgAWW50MCK8E3
+        VXLcF9A45mcdl8DkHD6ywAs9nAkMnlnzSeStRZ4mMMAvaqYiZOn+UikC65iQYW0YVGDyEBKtUvTLUOvk
+        ENj7e3P0Xb+rfoktCWImgAVWDwus3EcEFkq6B2LwX6M3cQlMzuEjC7xSjUtgrecdJkare6LAWFp/nayC
+        NxIJEVhYyg5d6y9m2+1QoAKTl7BpMRGwoRvOxhcqMAipgM3cpOvWhJjJggUW6gMCkxzKwPJ/HyUpYAgJ
+        1B8NpBMhlZVKQ2WionHUUlUTls9tWaJqaoFUtunYZGWzcUtUzcanqprbMqEaUjlbFF+kqKxMrMbPgmL8
+        AtmlbQvshQycsSYXXmzbec0Rfa8fdSYQWK99OhOEUYQu3qkLjE1Tt6ohLhY4Fz9g8gJVO1uibZiSxHkP
+        2quSVGbm2xE0FZinajcpXpZzvvjSYfL0iNC4BBXD9LkMYSwzAOHHSYshPCEhuXdammbw7t16YOS5syZW
+        YEP27NIP2btLD9uHIJA1TBUt6GgkYqYtWGBRXiywTNLPTKFQPANiZk2wwBK9UGCynLZKoVDqDmImCSyw
+        TC8SWAEWmCyT9hQKpe4gZjoCCyzRCwSWhwVG5UWheAHETGdggUV5sMDonBeF4kUQM7nAAovEAiv3MIFJ
+        PqCQQqG4F8RMPmCB1cMC03iAwEqwwGSL86JQKO4DMVMIWGAqLLByNxVYOhYYne+iULwUYqZQsMDqYYFl
+        upHANFhgtNdFoXg5xEyxYIH5YYFl1qHANFhgspwoQaFQ3B9iplSwwPywwBKxwEpcILByLLBMLDDa46JQ
+        fAxippxggYVigaVjgZXIKLByLLBMLDDJp6dSKBTPhZhZW2CB+WGBDcUCS8QC02CBFfAQWAkWmAYLLB0L
+        LAoLjPa0KBQKBr3x/5O7pyRk+tGbAAAAAElFTkSuQmCC
+</value>
+  </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAEAAM4AAAEAIADoUQMAFgAAACgAAAAAAQAAnAEAAAEAIAAAAAAAADgDABILAAASCwAAAAAAAAAA
