--- a/AirdPro/Forms/ReposWizardForm.resx
+++ b/AirdPro/Forms/ReposWizardForm.resx
@@ -265,6 +265,118 @@
         pgFOoopALS0UUAFOoopiClFFFMkWloooAWloooA//9k=
 </value>
   </data>
+  <data name="btnPX.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAARkAAABECAYAAAC1d0GKAAAABGdBTUEAALGOfPtRkwAAACBjSFJNAACH
+        DwAAjA8AAP1SAACBQAAAfXkAAOmLAAA85QAAGcxzPIV3AAAKOWlDQ1BQaG90b3Nob3AgSUNDIHByb2Zp
+        bGUAAEjHnZZ3VFTXFofPvXd6oc0wAlKG3rvAANJ7k15FYZgZYCgDDjM0sSGiAhFFRJoiSFDEgNFQJFZE
+        sRAUVLAHJAgoMRhFVCxvRtaLrqy89/Ly++Osb+2z97n77L3PWhcAkqcvl5cGSwGQyhPwgzyc6RGRUXTs
+        AIABHmCAKQBMVka6X7B7CBDJy82FniFyAl8EAfB6WLwCcNPQM4BOB/+fpFnpfIHomAARm7M5GSwRF4g4
+        JUuQLrbPipgalyxmGCVmvihBEcuJOWGRDT77LLKjmNmpPLaIxTmns1PZYu4V8bZMIUfEiK+ICzO5nCwR
+        3xKxRoowlSviN+LYVA4zAwAUSWwXcFiJIjYRMYkfEuQi4uUA4EgJX3HcVyzgZAvEl3JJS8/hcxMSBXQd
+        li7d1NqaQffkZKVwBALDACYrmcln013SUtOZvBwAFu/8WTLi2tJFRbY0tba0NDQzMv2qUP91829K3NtF
+        ehn4uWcQrf+L7a/80hoAYMyJarPziy2uCoDOLQDI3fti0zgAgKSobx3Xv7oPTTwviQJBuo2xcVZWlhGX
+        wzISF/QP/U+Hv6GvvmckPu6P8tBdOfFMYYqALq4bKy0lTcinZ6QzWRy64Z+H+B8H/nUeBkGceA6fwxNF
+        hImmjMtLELWbx+YKuGk8Opf3n5r4D8P+pMW5FonS+BFQY4yA1HUqQH7tBygKESDR+8Vd/6NvvvgwIH55
+        4SqTi3P/7zf9Z8Gl4iWDm/A5ziUohM4S8jMX98TPEqABAUgCKpAHykAd6ABDYAasgC1wBG7AG/iDEBAJ
+        VgMWSASpgA+yQB7YBApBMdgJ9oBqUAcaQTNoBcdBJzgFzoNL4Bq4AW6D+2AUTIBnYBa8BgsQBGEhMkSB
+        5CEVSBPSh8wgBmQPuUG+UBAUCcVCCRAPEkJ50GaoGCqDqqF6qBn6HjoJnYeuQIPQXWgMmoZ+h97BCEyC
+        qbASrAUbwwzYCfaBQ+BVcAK8Bs6FC+AdcCXcAB+FO+Dz8DX4NjwKP4PnEIAQERqiihgiDMQF8UeikHiE
+        j6xHipAKpAFpRbqRPuQmMorMIG9RGBQFRUcZomxRnqhQFAu1BrUeVYKqRh1GdaB6UTdRY6hZ1Ec0Ga2I
+        1kfboL3QEegEdBa6EF2BbkK3oy+ib6Mn0K8xGAwNo42xwnhiIjFJmLWYEsw+TBvmHGYQM46Zw2Kx8lh9
+        rB3WH8vECrCF2CrsUexZ7BB2AvsGR8Sp4Mxw7rgoHA+Xj6vAHcGdwQ3hJnELeCm8Jt4G749n43PwpfhG
+        fDf+On4Cv0CQJmgT7AghhCTCJkIloZVwkfCA8JJIJKoRrYmBRC5xI7GSeIx4mThGfEuSIemRXEjRJCFp
+        B+kQ6RzpLuklmUzWIjuSo8gC8g5yM/kC+RH5jQRFwkjCS4ItsUGiRqJDYkjiuSReUlPSSXK1ZK5kheQJ
+        yeuSM1J4KS0pFymm1HqpGqmTUiNSc9IUaVNpf+lU6RLpI9JXpKdksDJaMm4ybJkCmYMyF2TGKQhFneJC
+        YVE2UxopFykTVAxVm+pFTaIWU7+jDlBnZWVkl8mGyWbL1sielh2lITQtmhcthVZKO04bpr1borTEaQln
+        yfYlrUuGlszLLZVzlOPIFcm1yd2WeydPl3eTT5bfJd8p/1ABpaCnEKiQpbBf4aLCzFLqUtulrKVFS48v
+        vacIK+opBimuVTyo2K84p6Ss5KGUrlSldEFpRpmm7KicpFyufEZ5WoWiYq/CVSlXOavylC5Ld6Kn0Cvp
+        vfRZVUVVT1Whar3qgOqCmrZaqFq+WpvaQ3WCOkM9Xr1cvUd9VkNFw08jT6NF454mXpOhmai5V7NPc15L
+        Wytca6tWp9aUtpy2l3audov2Ax2yjoPOGp0GnVu6GF2GbrLuPt0berCehV6iXo3edX1Y31Kfq79Pf9AA
+        bWBtwDNoMBgxJBk6GWYathiOGdGMfI3yjTqNnhtrGEcZ7zLuM/5oYmGSYtJoct9UxtTbNN+02/R3Mz0z
+        llmN2S1zsrm7+QbzLvMXy/SXcZbtX3bHgmLhZ7HVosfig6WVJd+y1XLaSsMq1qrWaoRBZQQwShiXrdHW
+        ztYbrE9Zv7WxtBHYHLf5zdbQNtn2iO3Ucu3lnOWNy8ft1OyYdvV2o/Z0+1j7A/ajDqoOTIcGh8eO6o5s
+        xybHSSddpySno07PnU2c+c7tzvMuNi7rXM65Iq4erkWuA24ybqFu1W6P3NXcE9xb3Gc9LDzWepzzRHv6
+        eO7yHPFS8mJ5NXvNelt5r/Pu9SH5BPtU+zz21fPl+3b7wX7efrv9HqzQXMFb0ekP/L38d/s/DNAOWBPw
+        YyAmMCCwJvBJkGlQXlBfMCU4JvhI8OsQ55DSkPuhOqHC0J4wybDosOaw+XDX8LLw0QjjiHUR1yIVIrmR
+        XVHYqLCopqi5lW4r96yciLaILoweXqW9KnvVldUKq1NWn46RjGHGnIhFx4bHHol9z/RnNjDn4rziauNm
+        WS6svaxnbEd2OXuaY8cp40zG28WXxU8l2CXsTphOdEisSJzhunCruS+SPJPqkuaT/ZMPJX9KCU9pS8Wl
+        xqae5Mnwknm9acpp2WmD6frphemja2zW7Fkzy/fhN2VAGasyugRU0c9Uv1BHuEU4lmmfWZP5Jiss60S2
+        dDYvuz9HL2d7zmSue+63a1FrWWt78lTzNuWNrXNaV78eWh+3vmeD+oaCDRMbPTYe3kTYlLzpp3yT/LL8
+        V5vDN3cXKBVsLBjf4rGlpVCikF84stV2a9021DbutoHt5turtn8sYhddLTYprih+X8IqufqN6TeV33za
+        Eb9joNSydP9OzE7ezuFdDrsOl0mX5ZaN7/bb3VFOLy8qf7UnZs+VimUVdXsJe4V7Ryt9K7uqNKp2Vr2v
+        Tqy+XeNc01arWLu9dn4fe9/Qfsf9rXVKdcV17w5wD9yp96jvaNBqqDiIOZh58EljWGPft4xvm5sUmoqb
+        PhziHRo9HHS4t9mqufmI4pHSFrhF2DJ9NProje9cv+tqNWytb6O1FR8Dx4THnn4f+/3wcZ/jPScYJ1p/
+        0Pyhtp3SXtQBdeR0zHYmdo52RXYNnvQ+2dNt293+o9GPh06pnqo5LXu69AzhTMGZT2dzz86dSz83cz7h
+        /HhPTM/9CxEXbvUG9g5c9Ll4+ZL7pQt9Tn1nL9tdPnXF5srJq4yrndcsr3X0W/S3/2TxU/uA5UDHdavr
+        XTesb3QPLh88M+QwdP6m681Lt7xuXbu94vbgcOjwnZHokdE77DtTd1PuvriXeW/h/sYH6AdFD6UeVjxS
+        fNTws+7PbaOWo6fHXMf6Hwc/vj/OGn/2S8Yv7ycKnpCfVEyqTDZPmU2dmnafvvF05dOJZ+nPFmYKf5X+
+        tfa5zvMffnP8rX82YnbiBf/Fp99LXsq/PPRq2aueuYC5R69TXy/MF72Rf3P4LeNt37vwd5MLWe+x7ys/
+        6H7o/ujz8cGn1E+f/gUDmPP8usTo0wAAAAlwSFlzAAALEgAACxIB0t1+/AAADn1JREFUeF7tnTsLZUkV
+        hfsnzE9ojBU6nHAQBBOhzYykwUAYGOhgUBGEhgbFQFsURDGYwMTISTQwGsRYOzaazLTBP9CzvkvVpc4+
+        u87Z53Hfe8Gi+5za9Ty1Vz1v95P///BrH4gfBfj0SSKRSCxFEZD3Qb4TPxM/KtETiURiGghGEZClfFOS
+        SCQSiT4kFmtFBn5WkkkkEgkfEgorMu5SqNi9aewm7ROJROIARGKJaCj8pbH/vARdNVTO3LhOJC4BOd8i
+        kQGy+bKxf1deXy1Uxqe3UM5E4i4h51sjMl+0ccrrq4TKxxH922svZyJxt5Dz3bvIHATm2suZSNwt5HxL
+        92RYerT2b0vQAXp+Ib4qPKZVnusyiz95/qAEj0CYyP7PQNBERIMN6Nk9Ftlwp6eNW8vVspuOwmgb0hgs
+        D8XPxRfFLATZ71EfylPLfchff5Iu8dsy8nfKPUiTZ9Hakj/pdb9FC+zETfVIPBjUKcIio7Dj0qPhqxJ8
+        gJ7bznfovKKNU0lnH3VuvaMT48xenJbduzqEGdseR/XVO8psncgj9YqIw+b6AIXTntWW8iHoU+kS9qzE
+        Ddv2oPC5NCpfliiJxKHjWJFhBKyjZUvP6ehwA5HQsxUZO5toOTqZ0ruB/X8/+fD9X376g/dvXv3kwH+/
+        /GYbH+Lotgw4g7XrcSAyevZEkXpSL2idbNQGLRQ2qs+ffvbJsT5/+/H32rTgqD4Vek97Vru2HG356rs2
+        rC1Da9umAb8sWY2gMK9NKSvp2PaCg8En8cBQZ7AiEyUddDTy6V3b0eu0nOXFYcTXn89EOv1oFqPn4+zj
+        fx9/4/3r16/ff/2P/xnxW7/7hxWbL0oSB+i5CqMVuPq+pV1SUNY2zmBU1jMiRLzWZpB/hd6H6vPh7/9l
+        xaaXns2XbzBYtumZ8tl6u7ZA76ytZ8M3a20QFdtu9CMrNpNL78SDgI5gOkaECIk7tS5hra17j0bvrcAM
+        yvHd3/zVdchKHNMIjeccgzTL6y6svdid9ivMLscG7aHnQVrf/9Wf3Xq0ZMbWxPHq04qMK/IVCmv3XZbY
+        jm5x650dOHozrcNVgWIHb+IOVeLEUEewjlWnwJaMeOwtTO5BFNs2vdk9CyC74wyCZYTnhJYIDTOEEm80
+        1de7pSLTjurdpQNQODOGY9riYD9Fz6vqw3KqxPPq04qMO9upUHgrgqtt9Ww3+kfi10LhVny7S8nEg0Cd
+        wIrMpimu4rciEx7JmjgHZ/Oc0KMZ/SdnE+V1F7Jpp/uzv8sy9tY56/vD8s4ru0eWVE1cW58lIrOLrZ6f
+        N2FwbpCx9rlkenTQCfbsFIrfikxo8488a5x/fvod1/l6/PiXf6h5Qbt/slRk2rQWsyQzyJeZiVfuHllW
+        1biirc8lRKYNW8PcAH50qBPctMgYp7TH6RcXmZ3rkyKTuD2oE6TIFLS2IvszxA+zJDPIl81pr9w93oDI
+        jOo9w9CeXOKOUTrCoBOVoFVQ/DUic9xEZSPXc74euXNS44qDsvPchEVEZtV+koXiDjaFN+zJ2PpcQmRs
+        /+ieUiUSLpxOdHaRAbI9bqL+6Oe/dh3Q0pwujX5lrXdLRaY9GeEodvXJiOIe6xM9XYLN6ZJXn0uIjD1F
+        C3/TROIAdZprEZnjjVKEY+6eDDQnS6O89M7WbVI0FG4vnYVmM7Ijn8FplJ4HN2R3qs/ZRQbonb2gODub
+        kQ3ihGhv6k+JOwCdQGw70EVEBrRxERr2JzxnZAZjHNK9IMa7xgba0xrugNibq9aheB7tK/BO5N5QnbF4
+        zjmoT2+GtqA+lxIZK77u7WGg9xxhs59VL+WlyDw66ASlM1ReUmQQhfbuyWEjmOUGgoOTsgfTLJHq36O3
+        WSHpU8aaz6C+eh6VoZB0iAdtmnDknN/+7d9f2t9a2d8uIS5tfcTu7Vy9v4jIAL3v/R6stgn0wlNkHh10
+        gj07heK3nW2RyADFwcntbMIlDlyWId2Lc7JrHcjjqL56Rxl6TuMR0Xleoh9AmeosxfkRZI+I25RgXkxk
+        gMIQmvZnA3NkRpM3fh8d6gRXJTIVlEN0xQZxcZYeOLXboRUHJ/KcA6fuHrEqDKfyZjWQ9CjfaNlQyjIo
+        HzOxCbEhj8nr+kA2FxUZoHCWie1yyJK6sBeTR9eJ24Ac9AUOWjnzk4O3YnfkVMdnbwHxgotG2CYedB2I
+        vMUvSlm6pB6f/uINArW4HNcE2qHU4cDyOpG4PcgxPxLftY46wUmhORXIs+Ttlcky/7+qROLaIMd8Ji4R
+        mrNdGiOvkqdXFsvuPx+RSCQuDDnoUzHqzAjSyYWGPEpeXhksZ/dd9oDyeSOybOuymCYSCQs5yJJlyUmF
+        RmlHl3FnEbwK5YWQeOU4spgmEgkPchKEZnSC0yEOPjhe3gNK80WTxxS/FM8mMED5pcgkEntAzhIVGrjb
+        UoW0TNo9MuO6xCZ0ikwisRfkMC+tA01ws9Aojaiwde/tnBrKN0UmkdgTcprozAJO/t9GU1DcsMCUKBeB
+        8k+RSST2hhznuRg95VkkArIPXbIrDM2WZMepFLOwehI0tZlNOHwlIqiTt2mLrZfOkcX0AD1zakdZPhe9
+        uOwr1fwX7S/JnrTZICcurHnAue9Fm2BHHOLyjRffJC5xpzj4Znrm2/CevL3vwjvKRJttutlMfJFvygBG
+        fjYvWNuA/Cgb/dHWwXLV5Ujilfi1PHx7r0y1T2B3KFdJ4r5BRcVdhUZ20dMs8p0UGIVTPj5KtIxT7G4o
+        632vsx5Z7OjckbpZkn6oU8mODuulsYWUObz0NXE9Up/quD2nmiLfdNHSWPYI5ux36jDSf8I/6ZEtwrJH
+        v6TtaMObvcUegiqII0cdB7tugygsmhYfp+t0CmO0WtuhpuiOVnofyWtrh5qsc4VsTiEylQdxKFl1YeJ4
+        3NoWcLIvVWAjnqIvWM6KjGxO1S+7A+DdQBWMzj6g2zn0LjorIn53yqywJcs4WKehlVMj6xaR2YOT/zcV
+        kI0nMrWOhFn2lmw9zs5InTin4mRZFL5kpl1Z+0GlZ+NxUmQUHikL4eTZfh+W95sH3ruAKojQ0GG9BrAc
+        CI3+Hr1k5wpUhcJIx4tnidOxdHHT4r2IWNkp7VaRqR2ItClrJe+mxK3l5Npf4dSr7qmQ9uxoXyFb1vpe
+        npaTaTr2HmnXtpyVtA2OFekPkxvqCo84J6QMcwOXF69lV2QUNicwhE3+/EXhtM1cm8wOQncBVRTH9BrA
+        kgaj8XEKL9xybtRCGCKOumYTmk6IQLgjRQnz8mo555jR8q/+5zwiUPo4uJdvyzmh8+K0fFtMu5ANfcOL
+        a9kT/ohgHvpgidKFbHBwL37LKZGZ+66h39fJLiJ2m6+N3ARUUZzSawDLOWWunD0Gl01ErE6i9Ep3VmSK
+        6SRkF2m31SKjuO1sgbwq299eRYRuq8iEfsuFnYnnccvsMnoyuVpk9D7SL+t3idCL33LRIHrTUGWjM5Q5
+        RjtCZAZ1kl9kK929RCbSiUIiI7v2mDy6FIvyXCITEd2eyHi2lqGlpOxWfxe9j87s9+Jj/RhXFWbEjM5W
+        LIk32ZlbyHb1qLcVSvdqREbhpBFpiy28C5EpprOQ7RaROfW3sHy8X/yr0mt2+ENr5Rayf3iRUVhkPwXS
+        vpQZ+7pkYuZJ/pGR9y5ERjzHTCbSL7HZi6tv2N80VPFIZ2lJY4VPRYDsIw52kg+gdCmvl9+RxXQSstvS
+        mSObgpy2TIq3wlc7doVjb3kOkZn9JuI59mQi/XLTLeaHhxpw7d7M5HG1hWwjHWHxDAkoDic/pO+WR++v
+        QWQi1wdm21M29yIye54urT7C1vvIN328Jc5eUONFp+89smEZFgXZRhyNjjXpJBWyQ1wQybpxunrULKaT
+        kN0WkYmM3BGRiXyzWxAZvh3f2otj2buvw7tIu0L3uwCFRfolg2qoX7ZQnPpbrJrH4jRuFqrsXrvq4dmH
+        7OhY0QtY2OFQdS8i0rmuWWQi4kCdqd9AbPTMvhkjf9Shrl5kgMLW7Aeu5ZTILOmXDGj4DnXnW7V9E9Jf
+        CUNUvFPD+xcZVTLaoHz8SCeC2EbXz+QfGTnW8JpFZsnIvZU3ITJA4QjN3kf4HrsiAxTO99k6s4/wvkVG
+        FeSDRgXmMDvRnyhz1DnCtxlli8NGR+Yor1ZkgMKi7d8j9YgI9M2ITIXs6GdL24Z+yayCuF54y0mRqZAd
+        3/hUgyC8X5FR5aJTUz60N12PCs2iEyLZ10tpOFA0j5aMgnQK0rjajd8WslniUNSPEfZwwqE/95g9eHFa
+        nl1kKmRf9zBIm+/Kt2tJWxB2TFd/j4hMeAAEsm/3UrbMtOjTtdyjpfDdQBWjsVYJTIXeLxGa1VenFZdp
+        K85c91481rXwTX8wyl/qYeuHYN58/c4FtRNO7PXDlpuPoZUG3wRWEfRYv93jfD9VNKLykGnnZKMofMl0
+        nw+fTpKYhfrJ0TnLqxBkT3+MLG1CM7PECqhxoydI4ZmHbBl9o0LTnRklEhWmz0CWJwxS9RTHkrDoEobZ
+        d16m2xtqVIQgKjChDbEWirNEaOgMiy/YJR4Hpr/syex7p4AadYkALNoMa6G45BPdhWc0yY+dcGH6yh5E
+        XJjx5Cx6b6hRWaNGppE4/WqBaaF0ojOm3fJM3BfUL+hDLIGig6MlfZ74CEsOZqcCjStGTn92n1UovajQ
+        wBSaRAjqK/WUxmUxS5wDavDoCdLJli1Kl9MBL0+Pj/lz90TiFiGHjTr3yU96lH5U7ODj/DOEicStAkc1
+        jtvj2Y6Slc8SoWHjODfnEolrA45ZHNRzXEuE6KyOrPxYM0f2h+DZBDCRSASAQxbH9BzW8mJLEuW95GcI
+        1CdPBRKJSwNHFKOOu/iS3d5QGZaU92Sb0olEIgA54JIlyNUcE6ssS2Ze1O95iZpIJM4FOd6SI+qru4ei
+        Mi0RGph3aRKJc0EOh4O2Pw6b4tUuN1S2JfWAuRmcuEM8efIVvw66HoODU+kAAAAASUVORK5CYII=
+</value>
+  </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAEAAM4AAAEAIADoUQMAFgAAACgAAAAAAQAAnAEAAAEAIAAAAAAAADgDABILAAASCwAAAAAAAAAA
