--- a/AirdPro/Controls/MirrorBox/MirrorBox.resx
+++ b/AirdPro/Controls/MirrorBox/MirrorBox.resx
@@ -117,6 +117,15 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="picBox.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAJRJREFUOE9j
+        GIFAeMotcyiTPCA0/Xa98NTbS4Sm3pGFCEy7vUpw2u39pGCgnv8gDGS3MghMvu1ACga5AGzA1FsT+ac9
+        FAS7ghQA8cItTSgXAQRm3NQHSUK5xAPemTdFgM5ZBnYW0ABszsaHGYSm3u5BChSsgYYLA/WsAruCf/YD
+        RaHpd7aS5QVkIDj1rg2UOXIAAwMAJ5GZV6o+86wAAAAASUVORK5CYII=
+</value>
+  </data>
   <metadata name="tipVendor.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
